...
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/insetDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:padding="25dp"
                android:text="Insert Data"
                android:textColor="@color/white"
                android:textSize="36sp"

                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
...
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/date_edit_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="@drawable/rectangle_left"
...
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/time_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="@drawable/rectangle_left"
...
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/systolic_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="@drawable/rectangle_left"
...
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/diastolic_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="@drawable/rectangle_left"
...
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/heartRate_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:background="@drawable/rectangle_left"
...
                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/notBlack"
...
