...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/edit_save"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/notBlack"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/notBlack">

            <EditText
                android:id="@+id/date_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/comfortaa"
...
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:drawablePadding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/delete_imageBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_baseline_delete_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/heart_rate_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:inputType="number"
                        android:text="100"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/heart_rate_edit_details"
                        app:layout_constraintHorizontal_bias="0.41"
                        app:layout_constraintStart_toEndOf="@+id/heart_rate_text_details"
...
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/systolic_rate_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:text="85"
                        android:inputType="number"
                        android:textColor="@color/black"
...
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/diastolic_rate_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:inputType="number"
                        android:text="90"
                        android:textColor="@color/black"
...
